--- a/graphics/distribution_coin_dark.html
+++ b/graphics/distribution_coin_dark.html
@@ -92,7 +92,7 @@
                 }
             },
             title: {
-                text: '<a href="https://charts.bgeometrics.com">Bitcoin: Distribution Coins</a>',
+                text: 'Bitcoin Distribution Coins',
                 align: 'left',
             },
 
