--- a/graphics/lth_mvrv_dark.html
+++ b/graphics/lth_mvrv_dark.html
@@ -73,7 +73,7 @@
                 }
             },
             title: {
-                text: '<a href="https://charts.bgeometrics.com">Bitcoin: LTH MVRV (Market Value Realized Value)</a>',
+                text: 'Bitcoin LTH MVRV (Market Value Realized Value)',
                 align: 'left',
             },
 
