--- a/graphics/mvrv_dark.html
+++ b/graphics/mvrv_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin: Coin Days Destroyed</title>
+    <title>MVRV Z-Score (Market Value Realized Value)</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -28,18 +28,21 @@
     <script>
         (async () => {
             const data_price = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_btc_price.json'
+                'https://charts.bgeometrics.com/files/mvrv_zscore_btc_price.json'
             ).then(response => response.json());
-            const data_cdd = await fetch(
-                'https://charts.bgeometrics.com/files/cdd.json'
+            const data_mvrv = await fetch(
+                'https://charts.bgeometrics.com/files/mvrv.json'
             ).then(response => response.json());
-            const data_cdd_terminal_ajusted = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted.json'
+            const data_mvrv_zscore = await fetch(
+                'https://charts.bgeometrics.com/files/mvrv_zscore.json'
             ).then(response => response.json());
-            const data_cdd_terminal_ajusted_90dma = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted_90dma.json'
+            const data_lth_mvrv = await fetch(
+                'https://charts.bgeometrics.com/files/lth_mvrv.json'
             ).then(response => response.json());
- 
+            const data_sth_mvrv = await fetch(
+                'https://charts.bgeometrics.com/files/sth_mvrv.json'
+            ).then(response => response.json());
+
         var chart = Highcharts.stockChart('container-iframe', {
             stockTools: {
                 gui: {
@@ -62,10 +65,6 @@
                                 axisTypeIcon = isLogarithmic ? 'logarithmic.svg' : 'linear.svg',
                                 iconURL = 'https://code.highcharts.com/9.2.2/gfx/stock-icons/' + axisTypeIcon;
 
-                            chart.yAxis[0].update({
-                                type: isLogarithmic ? 'linear' : 'logarithmic',
-                                minorTickInterval: isLogarithmic ? null : 'auto'
-                            }, false)    
                             chart.yAxis[1].update({
                                 type: isLogarithmic ? 'linear' : 'logarithmic',
                                 minorTickInterval: isLogarithmic ? null : 'auto'
@@ -83,13 +82,13 @@
                 }
             },
             title: {
-                text: 'Bitcoin Coin Days Destroyed',
+                text: 'Bitcoin MVRV Z-Score (Market Value Realized Value)',
                 align: 'left',
             },
 
             chart: {
                 renderTo: 'container-iframe',
-                events:{
+                events: {
                     load: function() {
                         var image = new Image();
                         var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
@@ -109,11 +108,20 @@
                     }
                 }
             },
-
+            
             yAxis: [{
                 title: {
-                    text: 'CDD'
+                    text: 'MVRV'
                 },
+                plotBands: [{ 
+                    from: 6,
+                    to: 10,
+                    color: 'rgba(255, 0, 0, 0.1)'
+                }, {
+                    from: 0.1,
+                    to: -0.7,
+                    color: 'rgba(0, 255, 0, 0.1)'
+                }]
             }, {
                 title: {
                     text: 'BTC price'
@@ -130,27 +138,25 @@
                 },
                 yAxis: 1
             }, {
-                id:'cdd',
-                name: 'Coin Days Destroyed',
-                data: data_cdd,
+                id:'mvrv_zscore',
+                name: 'MVRV Z-Score',
+                data: data_mvrv_zscore,
+                tooltip: {
+                    valueDecimals: 2
+                },
+                yAxis: 0
+            }, {
+                name: 'LTH-MVRV',
+                data: data_lth_mvrv,
                 visible: false,
                 tooltip: {
                     valueDecimals: 2
                 },
                 yAxis: 0
             }, {
-                id:'cdd_terminal_ajusted',
-                name: 'CDD Terminal Ajusted',
-                data: data_cdd_terminal_ajusted,
+                name: 'STH-MVRV',
+                data: data_sth_mvrv,
                 visible: false,
-                tooltip: {
-                    valueDecimals: 2
-                },
-                yAxis: 0
-            }, {
-                id:'cdd_terminal_ajusted_90dma',
-                name: 'CDD Terminal Ajusted 90dma',
-                data: data_cdd_terminal_ajusted_90dma,
                 tooltip: {
                     valueDecimals: 2
                 },
