--- a/graphics/realized_price_g_dark.html
+++ b/graphics/realized_price_g_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin: Coin Days Destroyed</title>
+    <title>Realized Price</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -27,17 +27,14 @@
 
     <script>
         (async () => {
+            const data_realized_price = await fetch(
+                'https://charts.bgeometrics.com/files/realized_price.json'
+            ).then(response => response.json());
             const data_price = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_btc_price.json'
+                'https://charts.bgeometrics.com/files/realized_price_btc_price.json'
             ).then(response => response.json());
-            const data_cdd = await fetch(
-                'https://charts.bgeometrics.com/files/cdd.json'
-            ).then(response => response.json());
-            const data_cdd_terminal_ajusted = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted.json'
-            ).then(response => response.json());
-            const data_cdd_terminal_ajusted_90dma = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted_90dma.json'
+            const data_delta_cap = await fetch(
+                'https://charts.bgeometrics.com/files/delta_cap.json'
             ).then(response => response.json());
  
         var chart = Highcharts.stockChart('container-iframe', {
@@ -83,13 +80,13 @@
                 }
             },
             title: {
-                text: 'Bitcoin Coin Days Destroyed',
+                text: '<a href="https://charts.bgeometrics.com">Bitcoin: Realized Price</a>',
                 align: 'left',
             },
 
             chart: {
                 renderTo: 'container-iframe',
-                events:{
+                events: {
                     load: function() {
                         var image = new Image();
                         var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
@@ -111,15 +108,14 @@
             },
 
             yAxis: [{
-                title: {
-                    text: 'CDD'
-                },
+                type: 'logarithmic',
+                startOnTick: false,
+                endOnTick: false
             }, {
                 title: {
                     text: 'BTC price'
                 },
                 type: 'logarithmic',
-                opposite: false
             }],
 
             series: [{
@@ -128,29 +124,19 @@
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 1
+                yAxis: 0
             }, {
-                id:'cdd',
-                name: 'Coin Days Destroyed',
-                data: data_cdd,
-                visible: false,
+                id:'realized_price',
+                name: 'Realized Price',
+                data: data_realized_price,
                 tooltip: {
                     valueDecimals: 2
                 },
                 yAxis: 0
             }, {
-                id:'cdd_terminal_ajusted',
-                name: 'CDD Terminal Ajusted',
-                data: data_cdd_terminal_ajusted,
-                visible: false,
-                tooltip: {
-                    valueDecimals: 2
-                },
-                yAxis: 0
-            }, {
-                id:'cdd_terminal_ajusted_90dma',
-                name: 'CDD Terminal Ajusted 90dma',
-                data: data_cdd_terminal_ajusted_90dma,
+                id:'delta_price',
+                name: 'Delta price',
+                data: data_delta_cap,
                 tooltip: {
                     valueDecimals: 2
                 },
@@ -194,6 +180,7 @@
             }
         });
     })();
+
     </script>
 
 </body>
