--- a/graphics/distribution_addr_dark.html
+++ b/graphics/distribution_addr_dark.html
@@ -92,7 +92,7 @@
                 }
             },
             title: {
-                text: '<a href="https://charts.bgeometrics.com">Bitcoin: Distribution Address</a>',
+                text: 'Bitcoin Distribution Address',
                 align: 'left',
             },
 
