--- a/graphics/moving_average_dark.html
+++ b/graphics/moving_average_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin: Coin Days Destroyed</title>
+    <title>Bitcoin moving average</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -28,16 +28,25 @@
     <script>
         (async () => {
             const data_price = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_btc_price.json'
+                'https://charts.bgeometrics.com/files/moving_average_price.json'
             ).then(response => response.json());
-            const data_cdd = await fetch(
-                'https://charts.bgeometrics.com/files/cdd.json'
+            const data_50dma = await fetch(
+                'https://charts.bgeometrics.com/files/50dma.json'
             ).then(response => response.json());
-            const data_cdd_terminal_ajusted = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted.json'
+            const data_155dma = await fetch(
+                'https://charts.bgeometrics.com/files/155dma.json'
             ).then(response => response.json());
-            const data_cdd_terminal_ajusted_90dma = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted_90dma.json'
+            const data_200dma = await fetch(
+                'https://charts.bgeometrics.com/files/200dma.json'
+            ).then(response => response.json());
+            const data_200wma = await fetch(
+                'https://charts.bgeometrics.com/files/200wma.json'
+            ).then(response => response.json());
+            const data_111dma = await fetch(
+                'https://charts.bgeometrics.com/files/111dma.json'
+            ).then(response => response.json());
+            const data_350dma_x2 = await fetch(
+                'https://charts.bgeometrics.com/files/350dma_x2.json'
             ).then(response => response.json());
  
         var chart = Highcharts.stockChart('container-iframe', {
@@ -83,13 +92,13 @@
                 }
             },
             title: {
-                text: 'Bitcoin Coin Days Destroyed',
+                text: 'Bitcoin Moving Average Price',
                 align: 'left',
             },
 
             chart: {
                 renderTo: 'container-iframe',
-                events:{
+                events: {
                     load: function() {
                         var image = new Image();
                         var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
@@ -111,15 +120,14 @@
             },
 
             yAxis: [{
-                title: {
-                    text: 'CDD'
-                },
+                type: 'logarithmic',
+                startOnTick: false,
+                endOnTick: false
             }, {
                 title: {
                     text: 'BTC price'
                 },
                 type: 'logarithmic',
-                opposite: false
             }],
 
             series: [{
@@ -128,29 +136,55 @@
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 1
+                yAxis: 0
             }, {
-                id:'cdd',
-                name: 'Coin Days Destroyed',
-                data: data_cdd,
+                id:'50_dma',
+                name: '50 dma',
+                data: data_50dma,
+                tooltip: {
+                    valueDecimals: 2
+                },
+                yAxis: 0
+            }, {
+                id:'155_dma',
+                name: '155 dma',
+                data: data_155dma,
                 visible: false,
                 tooltip: {
                     valueDecimals: 2
                 },
                 yAxis: 0
             }, {
-                id:'cdd_terminal_ajusted',
-                name: 'CDD Terminal Ajusted',
-                data: data_cdd_terminal_ajusted,
+                id:'200_dma',
+                name: '200 dma',
+                data: data_200dma,
+                tooltip: {
+                    valueDecimals: 2
+                },
+                yAxis: 0
+            }, {
+                id:'200_wma',
+                name: '200 wma',
+                data: data_200wma,
                 visible: false,
                 tooltip: {
                     valueDecimals: 2
                 },
                 yAxis: 0
             }, {
-                id:'cdd_terminal_ajusted_90dma',
-                name: 'CDD Terminal Ajusted 90dma',
-                data: data_cdd_terminal_ajusted_90dma,
+                id:'111_dma',
+                name: '111 dma',
+                data: data_111dma,
+                visible: false,
+                tooltip: {
+                    valueDecimals: 2
+                },
+                yAxis: 0
+            }, {
+                id:'350_dma_x2',
+                name: '350 dma x2',
+                data: data_350dma_x2,
+                visible: false,
                 tooltip: {
                     valueDecimals: 2
                 },
@@ -194,7 +228,7 @@
             }
         });
     })();
-    </script>
 
+    </script>
 </body>
 </html>
