--- a/graphics/pi_cycle_dark.html
+++ b/graphics/pi_cycle_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin: Coin Days Destroyed</title>
+    <title>Bitcoin Pi Cycle</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -18,29 +18,48 @@
     <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
     <script src="https://charts.bgeometrics.com/assets/js/themes/brand-dark.js"></script>
 
-    <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
+    <div id="container" style="width:100%; height:600px;"></div>
 
     <script>
         (async () => {
+            const data_111dma = await fetch(
+                'https://charts.bgeometrics.com/files/111dma.json'
+            ).then(response => response.json());
+            const data_350dma_x2 = await fetch(
+                'https://charts.bgeometrics.com/files/350dma_x2.json'
+            ).then(response => response.json());
             const data_price = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_btc_price.json'
+                'https://charts.bgeometrics.com/files/pi_cycle_price.json'
             ).then(response => response.json());
-            const data_cdd = await fetch(
-                'https://charts.bgeometrics.com/files/cdd.json'
-            ).then(response => response.json());
-            const data_cdd_terminal_ajusted = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted.json'
-            ).then(response => response.json());
-            const data_cdd_terminal_ajusted_90dma = await fetch(
-                'https://charts.bgeometrics.com/files/cdd_terminal_ajusted_90dma.json'
-            ).then(response => response.json());
- 
-        var chart = Highcharts.stockChart('container-iframe', {
+
+            row_old_111 = 0;
+            row_old_350 = 0;
+            max_time = [];
+            plotlines = [];
+            i = 0;
+            for (var row = 0; row < data_111dma.length; row++) {
+                if ((row_old_111 < row_old_350) && (data_111dma[row][1] > data_350dma_x2[row][1])) {
+                    max_time[i] = data_111dma[row][0];
+                    console.log(max_time[i]);
+                    pline = { 
+                        color: 'red',
+                        dashStyle: 'Dash',
+                        width: 0.8,
+                        value: max_time[i]
+                    };
+
+                    plotlines.push(pline);
+                    i++;
+                }
+
+                row_old_111 = data_111dma[row][1];
+                row_old_350 = data_350dma_x2[row][1];
+            }
+
+        var chart = Highcharts.stockChart('container', {
             stockTools: {
                 gui: {
                     buttons: ['linLogSwitch', 'separator', 'indicators', 'separator', 'simpleShapes', 'lines', 'crookedLines', 'measure', 'advanced', 'separator', 'verticalLabels', 'flags', 'separator', 'zoomChange', 'fullScreen', 'separator', 'currentPriceIndicator', 'toggleAnnotations'],
@@ -62,10 +81,6 @@
                                 axisTypeIcon = isLogarithmic ? 'logarithmic.svg' : 'linear.svg',
                                 iconURL = 'https://code.highcharts.com/9.2.2/gfx/stock-icons/' + axisTypeIcon;
 
-                            chart.yAxis[0].update({
-                                type: isLogarithmic ? 'linear' : 'logarithmic',
-                                minorTickInterval: isLogarithmic ? null : 'auto'
-                            }, false)    
                             chart.yAxis[1].update({
                                 type: isLogarithmic ? 'linear' : 'logarithmic',
                                 minorTickInterval: isLogarithmic ? null : 'auto'
@@ -83,13 +98,13 @@
                 }
             },
             title: {
-                text: 'Bitcoin Coin Days Destroyed',
+                text: 'Bitcoin: Pi Cycle',
                 align: 'left',
             },
 
             chart: {
-                renderTo: 'container-iframe',
-                events:{
+                renderTo: 'container',
+                events: {
                     load: function() {
                         var image = new Image();
                         var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
@@ -110,17 +125,22 @@
                 }
             },
 
+            xAxis: {
+                plotLines: plotlines
+            },
+
             yAxis: [{
-                title: {
-                    text: 'CDD'
-                },
-            }, {
+                type: 'logarithmic',
+                startOnTick: false,
+                endOnTick: false,
+            },{
                 title: {
                     text: 'BTC price'
                 },
                 type: 'logarithmic',
-                opposite: false
-            }],
+            },
+        
+        ],
 
             series: [{
                 name: 'BTC price',
@@ -128,29 +148,19 @@
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 1
+                yAxis: 0
             }, {
-                id:'cdd',
-                name: 'Coin Days Destroyed',
-                data: data_cdd,
-                visible: false,
+                id:'111_dma',
+                name: 'Price 111 DMA',
+                data: data_111dma,
                 tooltip: {
                     valueDecimals: 2
                 },
                 yAxis: 0
             }, {
-                id:'cdd_terminal_ajusted',
-                name: 'CDD Terminal Ajusted',
-                data: data_cdd_terminal_ajusted,
-                visible: false,
-                tooltip: {
-                    valueDecimals: 2
-                },
-                yAxis: 0
-            }, {
-                id:'cdd_terminal_ajusted_90dma',
-                name: 'CDD Terminal Ajusted 90dma',
-                data: data_cdd_terminal_ajusted_90dma,
+                id:'350_dma_x2',
+                name: 'Price 350 DMA x2',
+                data: data_350dma_x2,
                 tooltip: {
                     valueDecimals: 2
                 },
@@ -188,12 +198,15 @@
                     chartOptions: {
                         rangeSelector: {
                             inputEnabled: false
-                        }
+                        },
+                        legend: {enabled:false}
                     }
                 }]
             }
         });
     })();
+
+
     </script>
 
 </body>
